--- a/views/index.haml
+++ b/views/index.haml
@@ -1,7 +1,2 @@
-!!! 5
-%html
-  %head
-    %title= "Poir Project"
-  %body
-    %a{:href => "construction/"}= "Construction"
-    %a{:href => "drop/"}= "Drop"
+%a{:href => "/construction/"}= "Construction"
+%a{:href => "/drop/"}= "Drop"
