--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,10 +1,10 @@
 !!! 5
 %html
   %head
-    %title= "poi-statistics @ 舰娘百科 × Poi"
     %meta{:charset => "utf-8"}
     %meta{:"http-equiv" => "X-UA-Compatiable", :content => "IE=edge"}
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1"}
+    =haml :header, :locals => locals
     %link{:href => "/stylesheets/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/offcanvas.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/custom.css", :rel => "stylesheet"}
