--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,6 +7,7 @@
     =haml :header, :locals => locals
     %link{:href => "/stylesheets/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/offcanvas.css", :rel => "stylesheet"}
+    %link{:href => "/stylesheets/bootstrap-table.min.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/custom.css", :rel => "stylesheet"}
     %script{:src => "/scripts/jquery.min.js"}
     / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -19,3 +20,7 @@
     / IE10 viewport hack for Surface/desktop Windows 8 bug
     %script{:src => "/scripts/ie10-viewport-bug-workaround.js"}
     %script{:src => "/scripts/offcanvas.js"}
+    %script{:src => "/scripts/bootstrap-table.min.js"}
+    %script{:src => "/scripts/tableExport.min.js"}
+    %script{:src => "/scripts/FileSaver.min.js"}
+    %script{:src => "/scripts/bootstrap-table-export.js"}
