add event page demo

--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -13,7 +13,9 @@
     %div#navbar-main.navbar-collapse.collapse
       %ul.nav.navbar-nav
         %li.active
-          %a{:href => "/drop"} 掉落统计
+          %a{:href => "/drop/"} 掉落统计
+        %li
+          %a{:href => "/event/"} 活动统计
 %div.container
   %div.page-header
     %h1 掉落统计
