--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,8 +8,10 @@
     %link{:href => "/stylesheets/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/offcanvas.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/bootstrap-table.min.css", :rel => "stylesheet"}
+    %link{:href => "/stylesheets/chartist.min.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/custom.css", :rel => "stylesheet"}
     %script{:src => "/scripts/jquery.min.js"}
+    %script{:src => "/scripts/chartist.min.js"}
     / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
     /[if lt IE 9]
       %script{:src => "/scripts/html5shiv.min.js"}
