--- a/views/drop/map/query.haml
+++ b/views/drop/map/query.haml
@@ -68,6 +68,7 @@
                       :"data-sortable" => "true"} B胜
                   %th{:"data-field" => "hqLvRange"} 提督等级
                   %th{:"data-field" => "dropRate",
+                      :"data-formatter" => "dropRateFormatter",
                       :"data-sortable" => "true"} 掉落率
       %div.busy-indicator
         %span.glyphicon.glyphicon-refresh.glyphicon-spin
