redirect index temporary

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,2 +1,2 @@
-%a{:href => "/construction/"}= "Construction"
-%a{:href => "/drop/"}= "Drop"
+:javascript
+  location.href = location.protocol + "//" + location.host + "/drop/";
