--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -31,6 +31,13 @@ body {
     }
 }
 
+.footer {
+    border-top: 1px solid #e5e5e5;
+    color: #777;
+    margin-top: 70px;
+    padding: 30px 0;
+}
+
 .drop-map {
     position: absolute;
     display: none;
