--- a/views/layout.haml
+++ b/views/layout.haml
@@ -18,6 +18,15 @@
       %script{:src => "/scripts/respond.min.js"}
   %body
     = yield
+    %footer.footer
+      %div.container
+        %div 注：网站数据更新间隔大约为一小时。
+        %div
+          %span 感谢
+          %a{:href => "https://github.com/poooi/poi"} Poi
+          %span 为本站提供数据支持。如果你在使用的过程中发现什么Bug 抑或是一些好的建议都欢迎在
+          %a{:href => "https://github.com/Gizeta/poi-statistics/issues"}Github Issue
+          %span 上提交。
     %script{:src => "/scripts/bootstrap.min.js"}
     / IE10 viewport hack for Surface/desktop Windows 8 bug
     %script{:src => "/scripts/ie10-viewport-bug-workaround.js"}
