--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,7 +23,7 @@
         %div 注：网站数据更新间隔大约为一小时。
         %div
           %span 感谢
-          %a{:href => "https://github.com/poooi/poi"} Poi
+          %a{:href => "https://github.com/poooi/poi"} poi
           %span 为本站提供数据支持。如果你在使用的过程中发现什么Bug 抑或是一些好的建议都欢迎在
           %a{:href => "https://github.com/Gizeta/poi-statistics/issues"}Github Issue
           %span 上提交。
