support sort on ship type

--- a/views/drop/map/query.haml
+++ b/views/drop/map/query.haml
@@ -58,7 +58,8 @@
                   %th{:"data-field" => "name",
                       :"data-formatter" => "nameFormatter",
                       :"data-switchable" => "false"} 舰娘
-                  %th{:"data-field" => "type"} 舰种
+                  %th{:"data-field" => "type",
+                      :"data-sortable" => "true"} 舰种
                   %th{:"data-field" => "totalCount"} 数量
                   %th{:"data-field" => "sCount",
                       :"data-sortable" => "true"} S胜
