--- a/views/event/index.haml
+++ b/views/event/index.haml
@@ -18,17 +18,16 @@
         %a{:href => "#"} 乙
       %li{:role => "presentation"}
         %a{:href => "#"} 丙
-      %li{:role => "presentation"}
-        %a{:href => "#"} 咸
     %div.row
+      %div.text-center Coming soon...
       %div.col-xs-12.col-sm-3
-        %div.well.well-lg
-          %p= "总人数： #{0}"
-          %p= "甲级人数： #{0}"
-          %p= "乙级人数： #{0}"
-          %p= "丙级人数： #{0}"
+        -#%div.well.well-lg
+          -#%p= "总人数： #{0}"
+          -#%p= "甲级人数： #{0}"
+          -#%p= "乙级人数： #{0}"
+          -#%p= "丙级人数： #{0}"
       %div.col-xs-12.col-sm-9
-        %div.ct-chart
+        %div
 %script{:defer => "defer"}
   :plain
     var data = {
