--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -20,6 +20,8 @@
               %a{:href => "#area5", :"data-toggle" => "tab"} 南方海域
             %li
               %a{:href => "#area6", :"data-toggle" => "tab"} 中部海域
+            %li
+              %a{:href => "#area31", :"data-toggle" => "tab"} 反撃！第二次SN作戦
           %div.tab-content
             %div#area1.tab-pane.active
               %div.col-xs-12.text-center
@@ -122,6 +124,29 @@
                   %img{:src => "http://upload.kcwiki.moe/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
                 %div.row
                   %img{:src => "http://upload.kcwiki.moe/commons/thumb/9/9e/MapBanner0-5.png/500px-MapBanner0-5.png"}
+            %div#area31.tab-pane
+              %div.col-xs-12.text-center
+                %div.row
+                  %a{:href => "/drop/map/ショートランド沖.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/1/12/MapBannerE-1Summer2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/ソロモン海.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/b/bb/MapBannerE-2Summer2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/南太平洋海域.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/1/1d/MapBannerE-3Summer2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/アイアンボトムサウンド.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/d/d4/MapBannerE-4Summer2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/西方海域戦線 カレー洋.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/4/46/MapBannerE-5Summer2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/ソロモン海東部海域.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/0/03/MapBannerE-6Summer2015.png"}
+                %div.row
+                  %a{:href => "/drop/map/FS方面海域.html"}
+                    %img{:src => "http://upload.kcwiki.moe/commons/e/ec/MapBannerE-7Summer2015.png"}
   %div.col-xs-12.col-lg-6
     %div.panel-group
       %div.panel.panel-primary
