--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -59,3 +59,16 @@ body {
     text-align:right;
     padding: 5px 15px;
 }
+
+.tab-panel {
+    border-top:0px;
+    border-top-left-radius:0px;
+    border-top-right-radius:0px;
+}
+
+.top5 { margin-top:5px; }
+.top7 { margin-top:7px; }
+.top10 { margin-top:10px; }
+.top15 { margin-top:15px; }
+.top17 { margin-top:17px; }
+.top30 { margin-top:30px; }
