--- a/views/event/index.haml
+++ b/views/event/index.haml
@@ -40,6 +40,8 @@
                   %p= "总人数： #{data[:first][:chosen]}"
                   %p= "通关人数： #{data[:first][:passed]}"
                   %p= "通关等级： #{data[:first][:hqLvMin]} ~ #{data[:first][:hqLvMax]}"
+                  %p= "总出击次数： #{data[:first][:battleTotal]}"
+                  %p= "Boss胜利次数： #{data[:first][:battleBoss]}"
               %div.col-xs-12.col-sm-9
                 %div.ct-chart{:id => "chart1"}
           %div.tab-pane{:id => "report2"}
@@ -49,6 +51,8 @@
                   %p= "总人数： #{data[:second][:chosen]}"
                   %p= "通关人数： #{data[:second][:chosen]}"
                   %p= "通关等级： #{data[:second][:hqLvMin]} ~ #{data[:second][:hqLvMax]}"
+                  %p= "总出击次数： #{data[:second][:battleTotal]}"
+                  %p= "Boss胜利次数： #{data[:second][:battleBoss]}"
               %div.col-xs-12.col-sm-9
                 %div.ct-chart{:id => "chart2"}
           %div.tab-pane{:id => "report3"}
@@ -58,6 +62,8 @@
                   %p= "总人数： #{data[:third][:chosen]}"
                   %p= "通关人数： #{data[:third][:chosen]}"
                   %p= "通关等级： #{data[:third][:hqLvMin]} ~ #{data[:third][:hqLvMax]}"
+                  %p= "总出击次数： #{data[:third][:battleTotal]}"
+                  %p= "Boss胜利次数： #{data[:third][:battleBoss]}"
               %div.col-xs-12.col-sm-9
                 %div.ct-chart{:id => "chart3"}
 %script{:defer => "defer"}
