design event page

--- a/views/event/index.haml
+++ b/views/event/index.haml
@@ -11,16 +11,16 @@
       %div
         %ul.nav.nav-pills
           %li.active{:role => "presentation"}
-            %a{:href => "#report0",
+            %a#tcon0{:href => "#report0",
                :"data-toggle" => "tab"} 总
           %li{:role => "presentation"}
-            %a{:href => "#report1",
+            %a#tcon1{:href => "#report1",
                :"data-toggle" => "tab"} 甲
           %li{:role => "presentation"}
-            %a{:href => "#report2",
+            %a#tcon2{:href => "#report2",
                :"data-toggle" => "tab"} 乙
           %li{:role => "presentation"}
-            %a{:href => "#report3",
+            %a#tcon3{:href => "#report3",
                :"data-toggle" => "tab"} 丙
         %div.tab-content
           %div.tab-pane.active{:id => "report0"}
@@ -43,7 +43,8 @@
                   %p= "总出击次数： #{data[:first][:battleTotal]}"
                   %p= "Boss胜利次数： #{data[:first][:battleBoss]}"
               %div.col-xs-12.col-sm-9
-                %div.ct-chart{:id => "chart1"}
+                %div#chart11.col-xs-6.ct-chart
+                %div#chart12.col-xs-6.ct-chart
           %div.tab-pane{:id => "report2"}
             %div.row
               %div.col-xs-12.col-sm-3.top30
@@ -54,7 +55,8 @@
                   %p= "总出击次数： #{data[:second][:battleTotal]}"
                   %p= "Boss胜利次数： #{data[:second][:battleBoss]}"
               %div.col-xs-12.col-sm-9
-                %div.ct-chart{:id => "chart2"}
+                %div#chart21.col-xs-6.ct-chart
+                %div#chart22.col-xs-6.ct-chart
           %div.tab-pane{:id => "report3"}
             %div.row
               %div.col-xs-12.col-sm-3.top30
@@ -65,17 +67,44 @@
                   %p= "总出击次数： #{data[:third][:battleTotal]}"
                   %p= "Boss胜利次数： #{data[:third][:battleBoss]}"
               %div.col-xs-12.col-sm-9
-                %div.ct-chart{:id => "chart3"}
+                %div#chart31.col-xs-6.ct-chart
+                %div#chart32.col-xs-6.ct-chart
 %script{:defer => "defer"}
   :plain
-    var data = {
+    var draw1 = false, draw2 = false, draw3 = false;
+    var data0 = {
       labels: ['甲', '乙', '丙'],
-      series: [20, 15, 40]
+      series: [#{data[:first][:chosen]}, #{data[:second][:chosen]}, #{data[:third][:chosen]}]
+    };
+    var data11 = {
+      labels: ['通关', '未通关'],
+      series: [#{data[:first][:passed]}, #{data[:first][:chosen] - data[:first][:passed]}]
+    };
+    var data12 = {
+      labels: ['Boss胜利', '劝退'],
+      series: [#{data[:first][:battleBoss]}, #{data[:first][:battleTotal] - data[:first][:battleBoss]}]
+    };
+    var data21 = {
+      labels: ['通关', '未通关'],
+      series: [#{data[:second][:passed]}, #{data[:second][:chosen] - data[:second][:passed]}]
+    };
+    var data22 = {
+      labels: ['Boss胜利', '劝退'],
+      series: [#{data[:second][:battleBoss]}, #{data[:second][:battleTotal] - data[:second][:battleBoss]}]
+    };
+    var data31 = {
+      labels: ['通关', '未通关'],
+      series: [#{data[:third][:passed]}, #{data[:third][:chosen] - data[:third][:passed]}]
+    };
+    var data32 = {
+      labels: ['Boss胜利', '劝退'],
+      series: [#{data[:third][:battleBoss]}, #{data[:third][:battleTotal] - data[:third][:battleBoss]}]
     };
     var options = {
       height: 300,
       labelInterpolationFnc: function(value) {
-        return value[0]
+      console.log(value);
+        return value[0];
       }
     };
     var responsiveOptions = [
@@ -88,8 +117,29 @@
         }
       }],
       ['screen and (min-width: 1024px)', {
-        labelOffset: 80,
+        labelOffset: 70,
         chartPadding: 20
       }]
     ];
-    charts.push "new Chartist.Pie('#chart', data, options, responsiveOptions);"
+    new Chartist.Pie('#chart0', data0, options, responsiveOptions);
+    $('#tcon1').on('shown.bs.tab', function(e) {
+      if (!draw1) {
+        draw1 = true;
+        new Chartist.Pie('#chart11', data11, options, responsiveOptions);
+        new Chartist.Pie('#chart12', data12, options, responsiveOptions);
+      }
+    });
+    $('#tcon2').on('shown.bs.tab', function(e) {
+      if (!draw2) {
+        draw2 = true;
+        new Chartist.Pie('#chart21', data21, options, responsiveOptions);
+        new Chartist.Pie('#chart22', data22, options, responsiveOptions);
+      }
+    });
+    $('#tcon3').on('shown.bs.tab', function(e) {
+      if (!draw3) {
+        draw3 = true;
+        new Chartist.Pie('#chart31', data31, options, responsiveOptions);
+        new Chartist.Pie('#chart32', data32, options, responsiveOptions);
+      }
+    });
