--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -72,3 +72,7 @@ body {
 .top15 { margin-top:15px; }
 .top17 { margin-top:17px; }
 .top30 { margin-top:30px; }
+
+.ct-label {
+    font-size: 15px;
+}
