fix wrong data in event page

--- a/views/event/index.haml
+++ b/views/event/index.haml
@@ -50,7 +50,7 @@
               %div.col-xs-12.col-sm-3.top30
                 %div.well.well-lg
                   %p= "总人数： #{data[:second][:chosen]}"
-                  %p= "通关人数： #{data[:second][:chosen]}"
+                  %p= "通关人数： #{data[:second][:passed]}"
                   %p= "通关等级： #{data[:second][:hqLvMin]} ~ #{data[:second][:hqLvMax]}"
                   %p= "总出击次数： #{data[:second][:battleTotal]}"
                   %p= "Boss胜利次数： #{data[:second][:battleBoss]}"
@@ -62,7 +62,7 @@
               %div.col-xs-12.col-sm-3.top30
                 %div.well.well-lg
                   %p= "总人数： #{data[:third][:chosen]}"
-                  %p= "通关人数： #{data[:third][:chosen]}"
+                  %p= "通关人数： #{data[:third][:passed]}"
                   %p= "通关等级： #{data[:third][:hqLvMin]} ~ #{data[:third][:hqLvMax]}"
                   %p= "总出击次数： #{data[:third][:battleTotal]}"
                   %p= "Boss胜利次数： #{data[:third][:battleBoss]}"
