--- a/views/event/index.haml
+++ b/views/event/index.haml
@@ -3,7 +3,7 @@
     %h1 活动统计
   %ul.nav.nav-tabs
     %li.active{:role => "presentation"}
-      %a{:href => "/event/index.html"} 总
+      %a{:href => "/event/index.html"} 进度
     - (1..7).each do |i|
       %li{:role => "presentation"}
         %a{:href => "/event/31#{i}.html"}= "E#{i}"
@@ -16,7 +16,7 @@
         %div.row
           %div.col-xs-12.col-sm-3.top30
             %div.well.well-lg
-              %p= "总人数： #{data[:e1][:chosen]}"
+              %p= "未通关人数： #{data[:e1][:chosen]}"
               %p= "E1： #{data[:e1][:chosen] - data[:e1][:passed]}"
               %p= "E2： #{data[:e2][:chosen] - data[:e2][:passed]}"
               %p= "E3： #{data[:e3][:chosen] - data[:e3][:passed]}"
