update drop rate. fix #2

--- a/views/drop/map/query.haml
+++ b/views/drop/map/query.haml
@@ -49,6 +49,15 @@
                       :"data-sortable" => "true"} A胜
                   %th{:"data-field" => "bCount",
                       :"data-sortable" => "true"} B胜
+                  %th{:"data-field" => "cCount",
+                      :"data-visible" => "false",
+                      :"data-sortable" => "true"} C败
+                  %th{:"data-field" => "dCount",
+                      :"data-visible" => "false",
+                      :"data-sortable" => "true"} D败
+                  %th{:"data-field" => "eCount",
+                      :"data-visible" => "false",
+                      :"data-sortable" => "true"} E败
                   %th{:"data-field" => "hqLvRange"} 提督等级
                   %th{:"data-field" => "dropRate",
                       :"data-formatter" => "dropRateFormatter",
