--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -16,3 +16,5 @@
           %a{:href => "/drop/"} 掉落统计
         %li{:class => locals[:location] == "event" ? "active" : nil}
           %a{:href => "/event/"} 活动统计
+        %li{:class => locals[:location] == "about" ? "active" : nil}
+          %a{:href => "/about/"} 关于
