--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -50,21 +50,6 @@
             %a{:href => "https://github.com/huoyaoyuan/KCVPlugins/releases", :target => "_blank"}
               下载插件(for KCV3.8.2)
         / ElectronicObserver(makai)： 有开发意向。
-%div.container
-  / 多说评论框 start
-  %div.ds-thread{:"data-thread-key" => "about",
-                 :"data-title" => "关于",
-                 :"data-url" => "http://db.kcwiki.moe/about/"}
-  / 多说评论框 end
-  / 多说公共JS代码 start (一个网页只需插入一次)
-  :javascript
-    var duoshuoQuery = {short_name:"poi-db"};
-      (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';ds.async = true;
-        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0]
-          || document.getElementsByTagName('body')[0]).appendChild(ds);
-      })();
-  / 多说公共JS代码 end
+=haml :duoshuo, :locals => { :key => "about",
+                             :title => "关于",
+                             :url => "http://db.kcwiki.moe/about/" }
