--- a/views/event/index.haml
+++ b/views/event/index.haml
@@ -60,21 +60,6 @@
       }]
     ];
     new Chartist.Pie('#chart', data, options, responsiveOptions);
-%div.container
-  / 多说评论框 start
-  %div.ds-thread{:"data-thread-key" => "event/index",
-                 :"data-title" => "活动统计",
-                 :"data-url" => "http://db.kcwiki.moe/event/index.html"}
-  / 多说评论框 end
-  / 多说公共JS代码 start (一个网页只需插入一次)
-  :javascript
-    var duoshuoQuery = {short_name:"poi-db"};
-      (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';ds.async = true;
-        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0]
-          || document.getElementsByTagName('body')[0]).appendChild(ds);
-      })();
-  / 多说公共JS代码 end
+=haml :duoshuo, :locals => { :key => "event/index",
+                             :title => "活动统计",
+                             :url => "http://db.kcwiki.moe/event/index.html" }
