--- a/views/event/query.haml
+++ b/views/event/query.haml
@@ -159,21 +159,6 @@
         new Chartist.Pie('#chart32', data32, options, responsiveOptions);
       }
     });
-%div.container
-  / 多说评论框 start
-  %div.ds-thread{:"data-thread-key" => "event/#{map_id}",
-                 :"data-title" => "活动统计##{map_id}",
-                 :"data-url" => "http://db.kcwiki.moe/event/#{map_id}.html"}
-  / 多说评论框 end
-  / 多说公共JS代码 start (一个网页只需插入一次)
-  :javascript
-    var duoshuoQuery = {short_name:"poi-db"};
-      (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';ds.async = true;
-        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0]
-          || document.getElementsByTagName('body')[0]).appendChild(ds);
-      })();
-  / 多说公共JS代码 end
+=haml :duoshuo, :locals => { :key => "event/#{map_id}",
+                             :title => "活动统计##{map_id}",
+                             :url => "http://db.kcwiki.moe/event/#{map_id}.html" }
