--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -23,12 +23,23 @@
     %div.col-md-6.text-center
       %a{:href => "http://zh.kcwiki.moe/", :target => "_blank"}
         %img{:width => 400, :height => 110, :src => "/images/kcwiki.png"}
-      %div
-        网站：
-        %a{:href => "http://zh.kcwiki.moe/", :target => "_blank"} 舰娘百科
-        %a{:href => "http://t.kcwiki.moe/", :target => "_blank"} 舰娘官推转发
-        %a{:href => "http://w.kcwiki.moe/", :target => "_blank"} 日文wiki镜像
-        %a{:href => "http://doc.kcwiki.moe/", :target => "_blank"} 舰娘百科Excel
+      %div.col-xs-9.text-left
+        %div 新浪微博：
+        %iframe{:width => "100%",
+                :height => 89,
+                :frameborder => 0,
+                :scrolling => "no",
+                :src => "http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=2&ptype=1&speed=0&skin=5&isTitle=0&noborder=1&isWeibo=0&isFans=0&uid=5664614383&verifier=c6b995e8&dpc=1"}
+      %div.col-xs-3.text-left
+        %div 网站：
+        %div
+          %a{:href => "http://zh.kcwiki.moe/", :target => "_blank"} 舰娘百科
+        %div
+          %a{:href => "http://t.kcwiki.moe/", :target => "_blank"} 舰娘官推转发
+        %div
+          %a{:href => "http://w.kcwiki.moe/", :target => "_blank"} 日文wiki镜像
+        %div
+          %a{:href => "http://doc.kcwiki.moe/", :target => "_blank"} 舰娘百科Excel
     %div.col-md-6.text-center
       %a{:href => "https://github.com/poooi/poi", :target => "_blank"}
         %img{:width => 400, :height => 110, :src => "/images/poi.png"}
